--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -2861,6 +2861,11 @@
              <string>Butterworth 6th Order 100Hzs </string>
             </property>
            </item>
+           <item>
+            <property name="text">
+             <string>Butterworth 6th Order 50Hzs</string>
+            </property>
+           </item>
           </widget>
          </item>
         </layout>
@@ -3849,6 +3854,11 @@
              <string>Butterworth 6th Order 100Hzs </string>
             </property>
            </item>
+           <item>
+            <property name="text">
+             <string>Butterworth 6th Order 50Hzs</string>
+            </property>
+           </item>
           </widget>
          </item>
         </layout>
@@ -4721,6 +4731,11 @@
            <item>
             <property name="text">
              <string>Butterworth 6th Order 100Hzs </string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Butterworth 6th Order 50Hzs</string>
             </property>
            </item>
           </widget>
